Fix: z-index of active time block

--- a/src/styles/styles.module.scss
+++ b/src/styles/styles.module.scss
@@ -18,6 +18,7 @@
   --z-index-layer-container: 1;
   --z-index-event: 2;
   --z-index-event-is-pending-creation: 1;
+  --z-index-event-active: 3;
   --z-index-draggable: 2;
   --z-index-dragging: 3;
   --z-index-day-header-row: 2;
@@ -177,10 +178,12 @@
 
     &:focus {
       --background: hsl(202, 100%, 40%);
+      z-index: var(--z-index-event-active);
     }
 
     &:focus-within {
       --background: hsl(202, 100%, 40%);
+      z-index: var(--z-index-event-active);
     }
   }
 
